--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-  	<div class="col-xs-3">
+　<div class="row">
+　　<div class="col-xs-3">
 <h2>User info</h2>
 <%= render 'users/profile', user: current_user %>
 <!--メモ　右側の指定に注意。そこを間違えるとエラーが発生して表示されない -->
@@ -24,7 +24,7 @@
 	<tbody>
 		<% @users.each do |user| %>
 		<tr>
-			<td><%= attachment_image_tag @user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "50x50" %></td>
+			<td><%= attachment_image_tag user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "50x50" %></td>
 			<td><%= user.name%></td>
 			<td><%= link_to "Show", user, class: "user_#{user.id}" %></td>
 		</tr>
