--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,19 +1,19 @@
+<div class="container">
+	<div class="row">
+		<div class="col-xs-3">
 
-<div class="row">
-	<div class="col-xs-3">
+			<h2>User info</h2>
+			<%= render 'users/profile' , user: @user%>
 
-		<h2>User info</h2>
-		<%= render 'users/profile' , user: @user%>
+			<h2>New book</h2>
+			<%= render 'books/newform' , book: @book %>
 
-		<h2>New book</h2>
-		<%= render 'books/newform' , book: @book %>
+		</div>
 
-	</div>
+		<div class="col-xs-9">
+			<h2>Book detail</h2>
 
-	<div class="col-xs-9">
-		<h2>Book detail</h2>
-
-		<table class="table">
+			<table class="table">
 				<tr>
 					<td>
 						<%= link_to (@book.user) do %>
@@ -28,6 +28,7 @@
 				</tr>
 			</table>
 
+		</div>
 	</div>
 </div>
 
